# puhekieli-lm

./: .env.example  .gitignore  AGENTS.md  README.md  TEST_MODEL.txt  pyproject.toml
.agents/: DATA_POLICY.md  DECISIONS.md  ENVIRONMENT.md  PROJECT.md  README.md  STATUS.md
.agents/skills/repo-tasks/: SKILL.md
.agents/skills/repo-tasks/references/: MODEL_NOTES.md
.pi/prompts/: commit.md  nb.md  status.md
examples/: genius_rap_seed.example.txt
notebooks/: 00_setup.ipynb  01_collect.ipynb  01b_synthesize.ipynb  02_tokenizer.ipynb
pi.dev/: README.md
plans/: README.md
scripts/: chat.py  finetune.py  fix_vocab.py  regenerate_tokens.py  run_finetune.sh
src/puhekieli_llm/: __init__.py  config.py  eval.py  sources.py  synth.py
